Update Project Setup

--- a/web/projects.json
+++ b/web/projects.json
@@ -1,19 +1,46 @@
 [
         {
-            "title": "Vernon",
-            "description": "Quality-focused reboot composite",
+            "title": "Portfolio Website",
+            "description": "A web hosted portfolio website that features dynamic conten, and a blog system tied together by Flask and GitHub Pages.",
             "image_url": "http://placeimg.com/640/480",
-            "stack": "",
-            "source_code": ""
+            "stack": ["Flask", "Github", "Markdown", "CSS", "HTML", "Linux CLI"],
+            "github_repo": "https://github.com/ax20/ashwin.lol_flask",
+            "demo_site": "https://ashwin.lol/"
         },
         {
-            "title": "Nolan",
-            "description": "Multi-layered firmware",
-            "image_url": "http://placeimg.com/640/480"
+            "title": "StockBot",
+            "description": "Predicts tomorrow's closing price of a given stock ticker based on technical indicators which is compared with a prediction made by a linear regression model.",
+            "image_url": "http://placeimg.com/640/480",
+            "stack": ["Python", "YahooFinance"],
+            "demo_site": "https://ashwin.lol/projects/stockbot"
         },
         {
-            "title": "Reyes",
-            "description": "array national",
-            "image_url": "http://placeimg.com/640/480"
-        }
+            "title": "Vlone",
+            "description": "In Minecraft (version 1.7.10), a Java based game we tracked the movements and packets sent from a player to deduce if they were cheating.",
+            "image_url": "http://placeimg.com/640/480",
+            "stack": ["Java", "ProtocolLib", "SpigotMC", "Minecraft"],
+            "demo_site": "https://ashwin.lol/projects/vlone"
+        },
+        {
+            "title": "Encryption Tool",
+            "description": "A GUI based file encryption application that utilizes the TripleDES protocol to secure text files; this can further be automated by using a configuration file.",
+            "image_url": "http://placeimg.com/640/480",
+            "stack": ["Java"],
+            "demo_site": "https://ashwin.lol/projects/encryption-tool"
+        },
+        {
+            "title": "Memory",
+            "description": "A GUI based screen capture tool that captures photos via the Robot class and has the ability to upload images automatically as well as the option to share the image to any email address provided.",
+            "image_url": "",
+            "stack": ["Java"],
+            "demo_site": "https://ashwin.lol/projects/memory"
+        },
+        {
+            "title": "URL Hunter",
+            "description": "Written in Python with the help of the PRAW library to download HTML content from the first thousand posts on a subreddit/user, crawl through two layers of URLs and log if the URL matches the search term.",
+            "image_url": "",
+            "stack":["HTML", "Python", "PRAW"],
+            "demo_site": "https://ashwin.lol/projects/url-hunter"
+        },
+
 ]
