--- a/web/projects.json
+++ b/web/projects.json
@@ -1,14 +1,22 @@
 [
         {
             "title": "Portfolio Website",
+            "project_id": "portfolio-website",
             "description": "A web hosted portfolio website that features dynamic conten, and a blog system tied together by Flask and GitHub Pages.",
             "image_url": "http://placeimg.com/640/480",
             "stack": ["Flask", "Github", "Markdown", "CSS", "HTML", "Linux CLI"],
             "github_repo": "https://github.com/ax20/ashwin.lol_flask",
-            "demo_site": "https://ashwin.lol/"
+            "demo_site": "https://ashwin.lol/",
+            "authors": "Ashwin Charathsandran",
+            "description_detailed": "",
+            "dependencies":"",
+            "date_conceived": "",
+            "date_completed": "",
+            "uses": ["VSCode", "CPanel", "Git Bash", "Github"] 
         },
         {
             "title": "StockBot",
+            "project_id": "stockbot",
             "description": "Predicts tomorrow's closing price of a given stock ticker based on technical indicators which is compared with a prediction made by a linear regression model.",
             "image_url": "http://placeimg.com/640/480",
             "stack": ["Python", "YahooFinance"],
@@ -16,6 +24,7 @@
         },
         {
             "title": "Vlone",
+            "project_id": "vlone",
             "description": "In Minecraft (version 1.7.10), a Java based game we tracked the movements and packets sent from a player to deduce if they were cheating.",
             "image_url": "http://placeimg.com/640/480",
             "stack": ["Java", "ProtocolLib", "SpigotMC", "Minecraft"],
@@ -23,12 +32,14 @@
         },
         {
             "title": "Entry Manager",
+            "project_id": "entry-manager",
             "description": "Mileage and fuel economy is automatically calculated and easy to track in newer automobiles however with older cars this is something that becomes very tedious. To make life easier myself and a friend created this project.",
             "image_url": "",
             "stack": ["Python", "ReactJS", "RESTful", "Flask"]
         },
         {
             "title": "Encryption Tool",
+            "project_id": "encryption-tool",
             "description": "A GUI based file encryption application that utilizes the TripleDES protocol to secure text files; this can further be automated by using a configuration file.",
             "image_url": "http://placeimg.com/640/480",
             "stack": ["Java"],
@@ -36,6 +47,7 @@
         },
         {
             "title": "Memory",
+            "project_id": "memory",
             "description": "A GUI based screen capture tool that captures photos via the Robot class and has the ability to upload images automatically as well as the option to share the image to any email address provided.",
             "image_url": "",
             "stack": ["Java"],
@@ -43,6 +55,7 @@
         },
         {
             "title": "URL Hunter",
+            "project_id": "url-hunter",
             "description": "Written in Python with the help of the PRAW library to download HTML content from the first thousand posts on a subreddit/user, crawl through two layers of URLs and log if the URL matches the search term.",
             "image_url": "",
             "stack":["HTML", "Python", "PRAW"],
