--- a/web/projects.json
+++ b/web/projects.json
@@ -1,64 +1,30 @@
 [
-        {
-            "title": "Portfolio Website",
-            "project_id": "portfolio-website",
-            "description": "A web hosted portfolio website that features dynamic conten, and a blog system tied together by Flask and GitHub Pages.",
-            "image_url": "http://placeimg.com/640/480",
-            "stack": ["Flask", "Github", "Markdown", "CSS", "HTML", "Linux CLI"],
-            "github_repo": "https://github.com/ax20/ashwin.lol_flask",
-            "demo_site": "/",
-            "authors": "Ashwin Charathsandran",
-            "description_detailed": "       ",
-            "date_conceived": "2021-01-02",
-            "date_completed": "ONGOING",
-            "uses": ["VSCode", "CPanel", "Git Bash", "Github", "Flask", "Jinja2"] 
-        },
-        {
-            "title": "StockBot",
-            "project_id": "stockbot",
-            "description": "Predicts tomorrow's closing price of a given stock ticker based on technical indicators which is compared with a prediction made by a linear regression model.",
-            "image_url": "http://placeimg.com/640/480",
-            "stack": ["Python", "YahooFinance"],
-            "demo_site": "/projects/stockbot"
-        },
-        {
-            "title": "Vlone",
-            "project_id": "vlone",
-            "description": "In Minecraft (version 1.7.10), a Java based game we tracked the movements and packets sent from a player to deduce if they were cheating.",
-            "image_url": "http://placeimg.com/640/480",
-            "stack": ["Java", "ProtocolLib", "SpigotMC", "Minecraft"],
-            "demo_site": "/projects/vlone"
-        },
-        {
-            "title": "Entry Manager",
-            "project_id": "entry-manager",
-            "description": "Mileage and fuel economy is automatically calculated and easy to track in newer automobiles however with older cars this is something that becomes very tedious. To make life easier myself and a friend created this project.",
-            "image_url": "",
-            "stack": ["Python", "ReactJS", "RESTful", "Flask"]
-        },
-        {
-            "title": "Encryption Tool",
-            "project_id": "encryption-tool",
-            "description": "A GUI based file encryption application that utilizes the TripleDES protocol to secure text files; this can further be automated by using a configuration file.",
-            "image_url": "http://placeimg.com/640/480",
-            "stack": ["Java"],
-            "demo_site": "/projects/encryption-tool"
-        },
-        {
-            "title": "Memory",
-            "project_id": "memory",
-            "description": "A GUI based screen capture tool that captures photos via the Robot class and has the ability to upload images automatically as well as the option to share the image to any email address provided.",
-            "image_url": "",
-            "stack": ["Java"],
-            "demo_site": "/projects/memory"
-        },
-        {
-            "title": "URL Hunter",
-            "project_id": "url-hunter",
-            "description": "Written in Python with the help of the PRAW library to download HTML content from the first thousand posts on a subreddit/user, crawl through two layers of URLs and log if the URL matches the search term.",
-            "image_url": "",
-            "stack":["HTML", "Python", "PRAW"],
-            "demo_site": "/projects/url-hunter"
-        }
-
+    {
+        "project_title": "Portfolio",
+        "project_id": "portfolio",
+        "description": "A web hosted portfolio website that features dynamic conten, and a blog system tied together by Flask.",
+        "image_url": "/static/800_600.jpg",
+        "stack": ["Python", "Flask", "Markdown", "CSS", "HTML", "JSON", "Javascript", "Jinja2"],
+        "github_repository": "https://github.com/ax20/ashwin.lol_flask",
+        "project_live": "https://ashwin.lol/",
+        "authors": "Ashwin Charathsandran",
+        "description_detailed": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nunc nunc, ornare vitae volutpat vel, dapibus quis tortor. Fusce viverra dolor ac eros gravida sollicitudin. Cras enim dui, lobortis id nisi nec, volutpat interdum dolor. Sed porttitor tristique ipsum, nec feugiat justo iaculis ac. Aenean elit ante, pellentesque eu rutrum id, consequat sed sem. Integer laoreet, sem in interdum pretium, ligula sapien congue odio, non egestas nulla arcu vitae libero. Integer facilisis, massa non elementum cursus, nulla quam gravida justo, sed dignissim velit massa auctor sem. Curabitur posuere maximus tincidunt. Cras eros lacus, malesuada in ante eget, posuere viverra leo. Vestibulum sollicitudin lobortis ex sit amet aliquet. Donec volutpat quam ac purus gravida, eu consectetur ex aliquam. Phasellus sit amet pellentesque diam, blandit rutrum ligula. Donec dictum nibh in tellus ultrices tristique. Integer laoreet orci est.<br>Nam sagittis sem non purus eleifend molestie. Duis auctor vitae purus ornare sagittis. Ut iaculis sit amet felis sed porttitor. Nam blandit, elit eu porta faucibus, eros diam consequat dolor, et consectetur massa eros ut nunc. Maecenas eu ligula ullamcorper purus tincidunt semper. Suspendisse quis dapibus nisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Vestibulum ac eros id sapien luctus molestie.<br>Pellentesque fermentum eget diam ut elementum. Aliquam erat volutpat. Aenean accumsan, dui a rutrum feugiat, massa tortor laoreet risus, et venenatis lectus lorem id enim. Morbi tincidunt augue id lorem consequat, ut aliquet enim porttitor. Curabitur non faucibus augue. Nullam ultricies cursus ante sit amet convallis. Ut turpis arcu, euismod ac arcu id, pharetra pellentesque turpis. Cras posuere enim sed massa pretium, quis iaculis justo fermentum. Aliquam semper nulla vel ipsum egestas vulputate. Sed in ipsum sed nisl mattis ornare at ac magna. Morbi vulputate lorem ut turpis venenatis, sit amet rhoncus leo tristique. Sed blandit augue ligula, quis condimentum nisl lacinia eget. Suspendisse leo ipsum, sollicitudin in orci ut, vestibulum fringilla justo. Pellentesque et accumsan enim, quis rhoncus velit. Proin vehicula suscipit turpis, placerat tincidunt dui.",
+        "date_conceived": "2021-10-02",
+        "date_completed": "ONGOING",
+        "uses": ["VSCode", "CPanel", "Git Bash", "Github", "Google  Chrome"]
+    },
+    {
+        "project_title": "Stockbot",
+        "project_id": "stockbot",
+        "description": "Predicts tomorrow's closing price of a given stock ticker based on technical indicators which is compared with a prediction made by a linear regression model.",
+        "image_url": "/static/800_600.jpg",
+        "stack": ["Python", "Algorithms", "Stocks", "HTML", "JSON", "Javascript", "Jinja2"],
+        "github_repository": "https://github.com/ax20/ashwin.lol_flask",
+        "project_live": "https://ashwin.lol/",
+        "authors": "Ashwin Charathsandran",
+        "description_detailed": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nunc nunc, ornare vitae volutpat vel, dapibus quis tortor. Fusce viverra dolor ac eros gravida sollicitudin. Cras enim dui, lobortis id nisi nec, volutpat interdum dolor. Sed porttitor tristique ipsum, nec feugiat justo iaculis ac. Aenean elit ante, pellentesque eu rutrum id, consequat sed sem. Integer laoreet, sem in interdum pretium, ligula sapien congue odio, non egestas nulla arcu vitae libero. Integer facilisis, massa non elementum cursus, nulla quam gravida justo, sed dignissim velit massa auctor sem. Curabitur posuere maximus tincidunt. Cras eros lacus, malesuada in ante eget, posuere viverra leo. Vestibulum sollicitudin lobortis ex sit amet aliquet. Donec volutpat quam ac purus gravida, eu consectetur ex aliquam. Phasellus sit amet pellentesque diam, blandit rutrum ligula. Donec dictum nibh in tellus ultrices tristique. Integer laoreet orci est.<br>Nam sagittis sem non purus eleifend molestie. Duis auctor vitae purus ornare sagittis. Ut iaculis sit amet felis sed porttitor. Nam blandit, elit eu porta faucibus, eros diam consequat dolor, et consectetur massa eros ut nunc. Maecenas eu ligula ullamcorper purus tincidunt semper. Suspendisse quis dapibus nisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Vestibulum ac eros id sapien luctus molestie.<br>Pellentesque fermentum eget diam ut elementum. Aliquam erat volutpat. Aenean accumsan, dui a rutrum feugiat, massa tortor laoreet risus, et venenatis lectus lorem id enim. Morbi tincidunt augue id lorem consequat, ut aliquet enim porttitor. Curabitur non faucibus augue. Nullam ultricies cursus ante sit amet convallis. Ut turpis arcu, euismod ac arcu id, pharetra pellentesque turpis. Cras posuere enim sed massa pretium, quis iaculis justo fermentum. Aliquam semper nulla vel ipsum egestas vulputate. Sed in ipsum sed nisl mattis ornare at ac magna. Morbi vulputate lorem ut turpis venenatis, sit amet rhoncus leo tristique. Sed blandit augue ligula, quis condimentum nisl lacinia eget. Suspendisse leo ipsum, sollicitudin in orci ut, vestibulum fringilla justo. Pellentesque et accumsan enim, quis rhoncus velit. Proin vehicula suscipit turpis, placerat tincidunt dui.",
+        "date_conceived": "2021-10-02",
+        "date_completed": "ONGOING",
+        "uses": ["VSCode", "CPanel", "Git Bash", "Github", "Google  Chrome"]
+    }
 ]
